# googleiohackathon

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  HANDOFF.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: deploy-backend.yml
bench_knowledge/: 25e-precharge-2026-05-bom.yaml  25e-precharge-2026-05-schematic.json  25e-precharge-2026-05.yaml  bq79616-bringup-bom.csv  bq79616-bringup-bom.yaml  seed_25e.py
bench_knowledge/examples/: bq79616-bringup-2026-05.yaml
clients/: README.md  live_device_sim.py  requirements.txt
deploy/: README.md  bootstrap-vm.sh  docker-compose.yml
forge_ios/: .gitignore  IMPLEMENTATION.md  Package.swift  README.md  SPEC_REVIEW.md  project.yml
forge_ios/Forge/: ForgeApp.swift  Info.plist
forge_ios/Forge.xcodeproj/: project.pbxproj
forge_ios/ForgeTests/: BackoffPolicyTests.swift  ChatStoreTests.swift  ConfigStoreTests.swift  DetectionStoreTests.swift  OrchestratorSocketIntegrationTests.swift  ProtoTests.swift  TestSupport.swift  WireFixtureTests.swift
forge_v2/: .dockerignore  Dockerfile  README.md  pyproject.toml
forge_v2/orchestrator/: __init__.py  config.py  main.py
observer/: .dockerignore  ATTRIBUTION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
observer/observer/: __init__.py  config.py  distill.py  ingest.py  main.py  store.py  web.py
observer/observer/static/: index.html
observer/tests/: synthetic.py  test_distill.py  test_ingest_persist.py  test_store_views.py  test_web.py
observer/tools/: replay_synthetic.py
orchestrator/: __init__.py  config.py  genai_seams.py  main.py  seams.py
orchestrator/chat_bus/: __init__.py  bus.py  channels.py  envelopes.py  ws.py
orchestrator/graph/: __init__.py  engine.py  state.py
orchestrator/knowledge/: __init__.py  board_profile.py  bom.py  limits.py  lookups.py
orchestrator/live/: __init__.py  bridge.py  schematic_tools.py  session.py
orchestrator/managed_agents/: __init__.py  structured_output.py
orchestrator/proto/: __init__.py  events.py  examples.py
orchestrator/safety/: __init__.py  gate.py  matrix.py
orchestrator/schematic/: __init__.py  normalize.py  parser.py  schema.py
orchestrator/snapshot/: __init__.py  analyzer.py  endpoint.py
orchestrator/storage/: __init__.py  frame_store.py
orchestrator/tests/: test_genai_seams.py  test_main_sme_lifecycle.py  test_sandbox_compute.py  test_schematic_tools.py  test_seams_selectors.py  test_sme_managed_agent.py  test_sme_packs.py
quest/: AGENTS.md  README.md
quest/app/: build.gradle.kts
quest/gradle/: libs.versions.toml
smes/firmware/: AGENTS.md  SKILL.md
smes/layout/: AGENTS.md  SKILL.md
smes/librarian/: AGENTS.md  SKILL.md
smes/power/: AGENTS.md  SKILL.md
smes/reverse/: AGENTS.md  (+1 more)
specs/: 00_wire_protocol.md  01_langgraph_state_machine.md  02_sme_persona_format.md  03_safety_gate_matrix.md  04_chat_bus_protocol.md  05_bench_daemon_api.md  05_board_knowledge_api.md  06_demo_script.md  07_environment_setup.md  08_test_plan.md  09-schematic-to-json.md
tests_integration/: test_37_zero_config_boot.py  test_38_chat_streaming_incremental.py  test_38_replay_across_reconnect.py  test_39_device_wire_conformance.py  test_integration.py
(+117 files in other folders)
