[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "Forge — voice + vision multi-agent advisor for a human at an electronics bench"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["orchestrator", "tests_integration"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
    "live: tests that hit real Gemini / Managed Agents / Vertex Search (excluded from CI)",
]
