[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "Forge — voice + vision multi-agent advisor for a human at an electronics bench"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "langgraph>=0.2",   # production substrate for the graph (01 §5/§6); the
                        # deterministic GraphEngine validates the same nodes offline
    "fastapi>=0.115",   # serving surface (HANDOFF §2.A)
    "uvicorn[standard]>=0.32",
    "websockets>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Real model wiring (ROADMAP Phase 3); not needed to boot in stub mode.
live = ["google-genai>=0.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["orchestrator", "tests_integration"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
    "live: tests that hit real Gemini / Managed Agents / Vertex Search (excluded from CI)",
]
