[project]
name = "forge-v2-orchestrator"
version = "0.1.0"
description = "Forge orchestrator — FastAPI + LangGraph service (see ../specs)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "websockets>=13",
]

[project.optional-dependencies]
# Filled in as the real graph/engine lands (see specs/01, specs/02).
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orchestrator"]
